# django-dto

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: publish_to_pypi.yml  publish_to_pypi_test.yml  test.yml
django_dto/: __init__.py  core.py  dto.py  exceptions.py
tests/: models.py  settings.py  test_dto.py
